# MetabotStudio

./: .gitignore  LICENSE  README.md  deps.json
backends/: .gitignore  clean.sh  metabot.scad
backends/dxl/: config.json
backends/dxl/components/: body.scad  mx28-elbow.scad  mx28-head.scad  mx28-u-arm.scad  mx28-u-l.scad  mx28.scad  mx64-arm-to-arm.scad  mx64-block.scad  mx64-foot.scad  mx64-u-arm-side.scad  mx64-u-arm.scad  mx64.scad
backends/dxl/models/: fit.scad  lipo.scad  mx28-arm.scad  mx28-values.scad  mx28-with-arm.scad  mx28.scad  mx64-arm.scad  mx64-values.scad  mx64-with-arm.scad  mx64.scad  tag.scad
backends/dxl/parts/: body_block.scad  foot.scad  mx28-l.scad  mx28-u.scad  mx64-arms-plate.scad  mx64-u.scad
backends/dxl/util/: rounded.scad  screws.scad
backends/xl-320/: todo
backends/xl-320/components/: arm_leg.metabot.scad  arm_leg.scad  arm_to_arm.metabot.scad  arm_to_arm.scad  arm_u.metabot.scad  arm_u.scad  arms_side.metabot.scad  arms_side.scad  biais_leg.scad  block.metabot.scad  block.scad  body.metabot.scad  body.scad  body_arm.metabot.scad  body_arm.scad  body_side.scad  bottom_leg.metabot.scad  bottom_leg.scad  bottom_leg_angle.scad  debug.scad  double_u.metabot.scad  double_u.scad  integrated_body.scad  metabotv2_body.scad  motor.metabot.scad  motor.scad  side_leg.scad  side_to_side.metabot.scad  side_to_side.scad  single_motor.scad  square_body.metabot.scad  square_body.scad  square_body_arm.metabot.scad  square_body_arm.scad  square_body_rot.scad  square_body_side.scad  u_bar.metabot.scad  u_bar.scad  u_leg.scad  u_leg_angle.scad
backends/xl-320/models/: anchor.metabot.scad  (+14 more)
education/: CMakeLists.txt  Experience.cpp  Experience.h  ExperienceTest.h  ExperienceWalk.cpp  ExperienceWalk.h  Simulation.cpp  Simulation.h  main.cpp  makeln.sh  util.h  verbose.cpp  verbose.h
gui/: .gitignore  BOMWindow.cpp  BOMWindow.h  BOMWindow.ui  BackendSelector.cpp  BackendSelector.h  BackendSelector.ui  ComponentItem.cpp  ComponentItem.h  ComponentItem.ui  ComponentWizard.cpp  ComponentWizard.h  ComponentWizard.ui  DynamicsWindow.cpp  DynamicsWindow.h  DynamicsWindow.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  ObjectsTree.cpp  ObjectsTree.h  ParameterWidget.cpp  ParameterWidget.h  ParametersEditor.cpp  ParametersEditor.cpp.autosave  ParametersEditor.h  ParametersEditor.h.autosave  ParametersEditor.ui  ValueWidget.cpp  ValueWidget.h  Viewer.cpp  Viewer.h  ZerosEditor.cpp  ZerosEditor.h  ZerosEditor.ui  gui.pro  icons.qrc  main.cpp  mainwindow.cpp  mainwindow.h  (+1 more)
metabot/: .Component.h.swo  AnchorPoint.cpp  AnchorPoint.h  BOM.cpp  BOM.h  Backend.cpp  Backend.h  CMakeLists.txt  CSG.cpp  CSG.h  CSGNode.cpp  CSGNode.h  Cache.cpp  Cache.h  Component.cpp  Component.h  ComponentInstance.cpp  ComponentInstance.h  ComponentParameter.cpp  ComponentParameter.h  Dynamics.cpp  Dynamics.h  Kinematic.cpp  Kinematic.h  ModelRef.cpp  ModelRef.h  ModelRefs.cpp  ModelRefs.h  Module.cpp  Module.h  Parameter.cpp  Parameter.h  Parameters.cpp  Parameters.h  Part.cpp  Part.h  Parts.cpp  Parts.h  Ref.cpp  Ref.h  (+19 more)
metabot/3d/: Cube.cpp  Cube.h  Face.cpp  Face.h  Line.cpp  Line.h  Model.cpp  Model.h  Octree.cpp  Octree.h  Point3.cpp  Point3.h  Volume.cpp  Volume.h  stl.cpp  stl.h
metabot/bullet/: GLDebugDrawer.cpp  GLDebugDrawer.h  World.cpp  World.h
metabot/com/: Client.cpp  Client.h  Server.cpp  Server.h
metabot/json/src/lib_json/: json_reader.cpp
metabot/scad/: BOM.cpp  BOM.h  CSG.cpp  CSG.h  CSGNode.h  Module.cpp  SCAD.cpp  Shape.cpp  Shape.h
metabot/spline/: Combination.cpp  Combination.hpp  CubicSpline.cpp  CubicSpline.hpp  Function.cpp  Function.h  NewtonBinomial.cpp  NewtonBinomial.hpp  Polynom.cpp  Polynom.hpp  Spline.cpp  Spline.hpp
metabot/sym/: cloning.h  identity.h  rational.h  vecnorm.h  verylong.h
metabot/sym/symbolic/: equation.h  functions.h  integrate.h  number.h  product.h  solve.h  sum.h  symbol.h  symbolic.h  symbolicc++.h  symerror.h  symmatrix.h
metabot/util/: Benchmark.cpp  Benchmark.hpp  Bin.cpp  Bin.h  Cache.cpp  Cache.h  util.cpp  util.h
robots/: 1.robot  10.robot  11.robot  12.robot  13.robot  14.robot  15.robot  16.robot  17.robot  18.robot  19.robot  2.robot  20.robot  21.robot  22.robot  23.robot  3.robot  4.robot  5.robot  6.robot  7.robot  8.robot  8motors.robot  9.robot  asym.robot  bob.robot  bourrin.robot  grandiose.robot  hexapod.robot  mamifere.robot  metabot.robot  metabot2.robot  pentapod.robot  quadruped.robot  sigmaban.robot  spidey.robot  spidey12.robot  spidey8.robot  vertebrate.robot
simulation/: CMakeLists.txt  Controller.cpp  Controller.h  Experience.cpp  Experience.h  ExperienceCheckpoints.cpp  ExperienceCheckpoints.h  ExperienceController.cpp  ExperienceController.h  ExperienceStandUp.cpp  ExperienceStandUp.h  ExperienceTest.cpp  ExperienceTest.h  ExperienceWalk.cpp  ExperienceWalk.h  Experiment.cpp  Experiment.h  ExperimentCheckpoints.cpp  ExperimentCheckpoints.h  ExperimentController.cpp  ExperimentController.h  ExperimentIKWalk.cpp  ExperimentIKWalk.h  ExperimentShoot.cpp  ExperimentShoot.h  ExperimentStandUp.cpp  ExperimentStandUp.h  ExperimentStaticShoot.cpp  ExperimentStaticShoot.h  ExperimentTest.cpp  ExperimentTest.h  ExperimentWalk.cpp  ExperimentWalk.h  Function.cpp  GazeboRobot.cpp  GazeboRobot.h  Generator.cpp  Generator.h  Simulation.cpp  Simulation.h  (+12 more)
simulation/humanoid/: ExperimentIKWalk.cpp  ExperimentShoot.h  ExperimentStaticShoot.h
simulation/legged/: Controller.cpp  Controller.h  ExperimentAnalyze.cpp  ExperimentAnalyze.h  ExperimentCheckpoints.h  ExperimentController.cpp  ExperimentController.h
src/: AnchorPoint.cpp  AnchorPoint.h  Backend.cpp  Backend.h  CMakeLists.txt  CSG.cpp  CSG.h  CSGNode.cpp  CSGNode.h  Cache.cpp  Component.cpp  Component.h  ComponentInstance.cpp  ComponentInstance.h  ComponentParameter.h  Model.cpp  Model.h  ModelRef.cpp  ModelRef.h  Part.cpp  Part.h  Robot.cpp  TransformMatrix.cpp  TransformMatrix.h  Vector.h  main.cpp  util.cpp  util.h
src/3d/: Face.cpp  Model.cpp  Model.h  StlFactory.h  stl.cpp
src/stl/: Point3.cpp  Point3.h  StlFactory.cpp  Volume.h
(+50 files in other folders)
